# csmarketapi-python

./: pyproject.toml
.github/workflows/: test.yml
src/csmarketapi/: client.py  enums.py  models.py
tests/: test_csmarketapi.py
